--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,17 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.14.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.github.lambdatest</groupId>
+			<artifactId>lambdatest-java-sdk</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.6.3</version>
+		</dependency>
 
 	</dependencies>
 
