did Pom changes

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 				<version>3.7.0</version>
 				<configuration>
 					<release>10</release>
+					<verbose>false</verbose>
 				</configuration>
 			</plugin>
 			<plugin>
